# numeric_methods_examples

Backward Euler Method Example/: .cproject  .project
Backward Euler Method Example/Debug/: Backward Euler Method Example  makefile
Backward Euler Method Example/src/: Backward Euler Method Example.cpp
Euler ODE Numeric Example/: .cproject  .project
Euler ODE Numeric Example/Debug/: Euler ODE Numeric Example  (+1 more)
GaussEliminationMethod/: .cproject  .project
GaussEliminationPivotingSorting/: .cproject  .project
GaussEliminationWithPivoting/: .cproject  .project
Improved Euler Numeric ODE/: .cproject  .project
LU_Decomposition_Crout/: .cproject  .project
Runge-Kutta Example/: .cproject  .project
Runge-Kutta Example2/: .cproject  .project
bisection/: .cproject  .project
newton example/: .cproject  .project
numeric_examples/: .autotools  .cproject  .project  Makefile  Makefile.am  Makefile.in  NEWS  README  config.status  configure  configure.ac
numeric_examples/root_finding/: Makefile  Makefile.am  Makefile.in  bisection_test  bisection_test.cpp  fixed_point_iteration_test  fixed_point_iteration_test.cpp  newton_example1.cpp  newton_raphson.cpp  newton_test  newton_test.cpp  regula_false_test.cpp  regula_falsi_test  regula_falsi_test.cpp  root_finding.cpp  root_finding.h  secant_test  secant_test.cpp  systems_root_finding.cpp  systems_root_finding.h
numeric_examples/root_finding/.deps/: bisection_test.Po  fixed_point_iteration_test.Po  newton_test.Po  regula_falsi_test.Po  root_finding.Po  secant_test.Po
secant example/: .cproject  .project
(+85 files in other folders)
