bin_PROGRAMS=bisection_test regula_falsi_test newton_test secant_test fixed_point_iteration_test

bisection_test_SOURCES=bisection_test.cpp root_finding.cpp

regula_falsi_test_SOURCES=regula_falsi_test.cpp root_finding.cpp

newton_test_SOURCES = newton_test.cpp root_finding.cpp

secant_test_SOURCES = secant_test.cpp root_finding.cpp

fixed_point_iteration_test_SOURCES = fixed_point_iteration_test.cpp root_finding.cpp